--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/contributorDB?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/contributordb?useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: root
     sql-script-encoding: UTF-8
@@ -14,6 +14,22 @@ spring:
     show-sql: true
   thymeleaf:
     cache: false
-server:
-  port: 8080
+  profiles:
+    active:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: test.za.javu.smtp@gmail.com
+    password: testjava123
+    protocol: smtp
+    properties:
+      mail:
+        smtp:
+          auth: true
+          connectiontimeout: 5000
+          timeout: 3000
+          writetimeout: 5000
+          starttls:
+            enable: true
+    test-connection: false
 
