Set dev profile

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
   thymeleaf:
     cache: false
   profiles:
-    active:
+    active: dev
   mail:
     host: smtp.gmail.com
     port: 587
