Allow bean definition overriding

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,4 +32,6 @@ spring:
           starttls:
             enable: true
     test-connection: false
+  main:
+    allow-bean-definition-overriding: true
 
